--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -14,7 +14,7 @@
       <img class="topCloud" src="images\cloud.png" alt="cloud.png">
       <img class="bird" src="images\birds.png" alt="birds.png">
       <div class=welcome >
-        <h1>I'am Subham</h1>
+        <h1>I am Subham</h1>
         <h2 style="color:#FFFFFF">
           A Web Designer
         </h2>
@@ -26,7 +26,7 @@
       <div class="profile">
         <img src="images/profile pic.png" alt="profile pic">
         <h2>Hello.</h2>
-        <p class="intro">I am System Engineer at TCS, A part time Freelance,A web developer,Product Designer,A Home Chef and I ❤️ Travelling</p>
+        <p class="intro">I am System Engineer at TCS,A web Designer ,Product Designer,A Home Chef and I ❤️ Travelling</p>
       </div>
       <hr>
       <div class="skills">
@@ -39,7 +39,7 @@
         <div class="skill-row">
           <img class="s2" src="images/algorithm.png" alt="Skill-2">
           <h3>Data Structure And Algorithm</h3>
-          <p>I have been coading since 2018 and have been improving my skill since then.Chellinging my mind,being tenacious even after failing multiple times and at the end The satisfaction of solving a complex problem is what i love about DSA.</p>
+          <p>I have been coading since 2018 and have been improving my skill since then.Challenging my mind,being tenacious even after failing multiple times and at the end The satisfaction of solving a complex problem is what i love about DSA.</p>
         </div>
         <div class="skill-row">
           <img class="s3" src="images/sketch.png" alt="Skill-3">
@@ -51,7 +51,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>If you are like to hire me or like to colaborate in a project </h3>
-        <p class="contact">Do you like to work with me or talk to me ? I do , lets connect and let lerarn togetter.</p>
+        <p class="contact">Do you like to work with me or talk to me ? I do , lets connect and let learn togetter.</p>
         <a class="btn" href="mailto:subhamagarwal916@gmail.com">CONTACT ME</a>
       </div>
     </div>
